# malice-rhi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MaliceRHI.sln  MaliceRHI.vcxproj  MaliceRHI.vcxproj.filters  README.md
MaliceRHI/: MaliceRHI.sln  MaliceRHI.vcxproj  MaliceRHI.vcxproj.filters  main.cpp  vulkan_forwarddeclarations.h
MaliceRHI/code/include/: debug.h  ibuffer.h  icommandbuffers.h  idescriptorsetsgroup.h  ipipeline.h  irender_interface.h  irenderpass.h  ishadermodules.h  malicerhi_masterheader.h  vulkan_buffer.h  vulkan_commandbuffers.h  vulkan_commandpool.h  vulkan_descriptorsetsgroup.h  vulkan_device.h  vulkan_framebuffers.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_render_interface.h  vulkan_renderpass.h  vulkan_shadermodules.h  vulkan_surface.h  vulkan_uniformbuffers.h
MaliceRHI/code/include/malice_rhi/: malice_rhi.h
MaliceRHI/code/src/: debug.cpp  main.cpp  volk.c  vulkan_buffer.cpp  vulkan_commandbuffers.cpp  vulkan_commandpool.cpp  vulkan_descriptorsetsgroup.cpp  vulkan_device.cpp  vulkan_framebuffers.cpp  vulkan_instance.cpp  vulkan_pipeline.cpp  vulkan_render_interface.cpp  vulkan_renderpass.cpp  vulkan_shadermodules.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp
MaliceRHI/resources/: compile.bat  mainShader.frag  mainShader.vert
MaliceRHI/resources/shaders/: vert.spv
MaliceRHI/tests/MaliceFwdRenderer/: MaliceFwdRenderer.vcxproj  MaliceFwdRenderer.vcxproj.filters
MaliceRHI/tests/MaliceFwdRenderer/resources/: mainShader.vert
MaliceRHI_ForwardRenderer_UT/: MaliceRHI_ForwardRenderer_UT.vcxproj
code/: CMakeLists.txt
code/include/: icommandbuffers.h  icommandpool.h  idevice.h  iframebuffers.h  ipipeline.h  irender_interface.h  ishadermodules.h  iuniformbuffers.h  malicerhi_masterheader.h  vulkan_buffer.h  vulkan_commandbuffers.h  vulkan_commandpool.h  vulkan_descriptorsetsgroup.h  vulkan_device.h  vulkan_framebuffers.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_render_interface.h  vulkan_renderpass.h  vulkan_shadermodules.h  vulkan_surface.h  vulkan_swapchain.h  vulkan_uniformbuffers.h
code/include/Interface/: color.h  debug.h  ibuffer.h  icommandbuffers.h  idescriptorsetsgroup.h  idevice.h  iframebuffers.h  iinstance.h  imgui_support.h  ipipeline.h  irender_interface.h  irenderpass.h  ishadermodules.h  isurface.h  iswapchain.h  itexture.h  iuniformbuffers.h  malicerhi_masterheader.h
code/include/MaliceRHI/: malice_enums.h  malice_rhi.h
code/include/Vulkan/: vulkan_buffer.h  vulkan_commandbuffers.h  vulkan_commandpool.h  vulkan_descriptorsetsgroup.h  vulkan_device.h  vulkan_framebuffers.h  vulkan_imgui_support.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_render_interface.h  vulkan_renderpass.h  vulkan_shadermodules.h  vulkan_surface.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_uniformbuffers.h
code/src/: CMakeLists.txt  debug.cpp  vulkan_commandbuffers.cpp  vulkan_commandpool.cpp  vulkan_device.cpp  vulkan_framebuffers.cpp  vulkan_instance.cpp  vulkan_pipeline.cpp  vulkan_render_interface.cpp  vulkan_renderpass.cpp  vulkan_shadermodules.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp  vulkan_uniformbuffers.cpp
code/src/Interface/: debug.cpp
code/src/Vulkan/: vulkan_buffer.cpp  vulkan_commandbuffers.cpp  vulkan_commandpool.cpp  vulkan_descriptorsetsgroup.cpp  vulkan_device.cpp  vulkan_framebuffers.cpp  vulkan_imgui_support.cpp  vulkan_instance.cpp  vulkan_pipeline.cpp  vulkan_render_interface.cpp  vulkan_renderpass.cpp  vulkan_shadermodules.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_uniformbuffers.cpp
docs/: MaliceRHI_UMLdiagram.html
tests/MaliceFwdRenderer/: CMakeLists.txt  MaliceFwdRenderer.vcxproj  MaliceFwdRenderer.vcxproj.filters
tests/MaliceFwdRenderer/code/: CMakeLists.txt
tests/MaliceFwdRenderer/code/include/: application.h  imgui_renderer.h  vulkan_glfw_imgui_renderer.h
tests/MaliceFwdRenderer/code/source/: application.cpp  main.cpp
tests/MaliceFwdRenderer/code/src/: application.cpp  main.cpp  vulkan_glfw_imgui_renderer.cpp
tests/MaliceFwdRenderer/resources/: compile.bat  mainShader.frag  mainShader.vert  offscreenShader.frag  offscreenShader.vert
tests/MaliceFwdRenderer/resources/shaders/: frag.spv  offscreenFrag.spv  offscreenVert.spv  vert.spv
